--- a/index.html
+++ b/index.html
@@ -6,12 +6,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/bootstrap-4.3.1-dist/css/bootstrap.min.css">
-
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <title>Test</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="conteiner" style="width: 1200px; margin: 0 auto;">
+      <div class="row">
+        <div class="col-md-8">
+          <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+            <nav class="navbar navbar-light bg-light">
+              <a class="navbar-brand" href="#">
+                <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                Bootstrap
+              </a>
+            </nav>
+        </div>
+      </div>
+      <br>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/480586.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/480586.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/480586.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Lorem ipsum dolor sit amet.</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur impedit voluptatibus debitis cumque nostrum itaque commodi laboriosam voluptas assumenda voluptatum!</p>
+        </div>
+        <div class="col-md-8">
+          <h2>Lorem ipsum dolor sit amet.</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur impedit voluptatibus debitis cumque nostrum itaque commodi laboriosam voluptas assumenda voluptatum!</p>
+        </div>
+      </div>
+      
+      <div class="input-group save-text">
+        <div class="input-group-prepend">
+          <span class="input-group-text">With textarea</span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+      </div>
+      <button type="button" class="btn btn-secondary btn-lg">Button</button>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
